# Doc-Chat-AI

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/api/: main.py  routes.py
backend/app/: pipeline.py
backend/app/embeddings/: embedder.py
backend/app/ingestion/: loader.py  splitter.py
backend/app/llm/: generator.py  llm.py
backend/app/retrieval/: retriever.py
backend/app/vectorstore/: db.py
backend/vector_db/: chroma.py
frontend/: index.html  script.js  style.css
